[package]
name = "atricO2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "crates/*"
]

[workspace.dependencies]
async-trait = "0.1.64"
flate2 = "1.0.25"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["cookies", "cookie_store"] }
scraper = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "tracing"] }
urlencoding = "2.1.2"
